<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/menu_add"
        android:icon="@drawable/icon_add"
        android:title="@string/add"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/menu_switch"
        android:title="@string/toggle"
        app:actionViewClass="androidx.appcompat.widget.SwitchCompat"
        app:showAsAction="always" />

    <item
        android:id="@+id/menu_remove_all"
        android:title="@string/remove_all"
        app:showAsAction="never" />

    <item
        android:id="@+id/menu_about"
        android:title="@string/about"
        app:showAsAction="never" />

</menu>